# software-common

./: README.md  TODO
arm_bootloader/: CMakeLists.txt  manifest.xml
arm_bootloader/firmware/: Makefile  README  firmware.cpp  protocol.h  sha256.h  stm32f3-discovery.ld
auv_msgs/: CMakeLists.txt  manifest.xml  package.xml
auv_msgs/msg/: Current.msg  Dvl.msg  ThrusterState.msg
c3_trajectory_generator/: CMakeLists.txt  manifest.xml  package.xml
c3_trajectory_generator/action/: MoveTo.action
c3_trajectory_generator/include/: C3Trajectory.h
c3_trajectory_generator/src/: C3Trajectory.cpp  node.cpp
exposure_controller/: CMakeLists.txt  mainpage.dox  manifest.xml
exposure_controller/msg/: metered_exposure.msg
exposure_controller/src/: ExposureController.cpp  TestImgPub.cpp
hydrophones/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
imagenex_852/: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  setup.py
imagenex_852/cfg/: sonar.cfg
imagenex_852/msg/: Echo.msg
imagenex_852/scripts/: imagenex_852  test
imagenex_852/src/imagenex_852/: driver.py  node.py  test.py
indirect_kalman_6dof/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
kalman_6dof/: mainpage.dox  manifest.xml
kill_handling/: CMakeLists.txt  manifest.xml  readme.md
leddartech_evk_driver/: CMakeLists.txt  package.xml
legacy_ukf/: manifest.xml
legacy_vision/: CMakeLists.txt  mainpage.dox  manifest.xml  nodelet.xml  package.xml
legacy_vision/action/: Find.action
legacy_vision/include/: AvgLine.h  BinsFinder.h  Blob.h  BoatDockFinder.h  BuoyFinder.h  ButtonFinder.h  Contours.h  FinderGenerator.h  GrapesFinder.h  HedgeFinder.h  IFinder.h  ImageSource.h  Line.h  Normalizer.h  PipeFinder.h  ShooterFinder.h  ShooterFloodFinder.h  Thresholder.h  WreathFinder.h
legacy_vision/launch/: legacy_vision.launch
legacy_vision/msg/: TargetRes.msg
legacy_vision/src/: AvgLine.cpp  BinsFinder.cpp  BinsFinder_2013.cpp  Blob.cpp  BoatDockFinder.cpp  BuoyFinder.cpp  ButtonFinder.cpp  Contours.cpp  FinderGenerator.cpp  GrapesFinder.cpp  HedgeFinder.cpp  Line.cpp  Normalizer.cpp  PipeFinder.cpp  ShooterFinder.cpp  ShooterFloodFinder.cpp  Thresholder.cpp  WreathFinder.cpp  nodelet.cpp
libopencm3/: CMakeLists.txt  manifest.xml
magnetic_dynamic_compensation/: CMakeLists.txt  mainpage.dox  manifest.xml  nodelet.xml  package.xml
magnetic_dynamic_compensation/src/: nodelet.cpp
magnetic_hardsoft_compensation/: CMakeLists.txt  mainpage.dox  manifest.xml  nodelet.xml  package.xml
magnetic_hardsoft_compensation/scripts/: generate_config
magnetic_hardsoft_compensation/src/: nodelet.cpp
mission_core/: CMakeLists.txt  package.xml
object_finder/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
object_finder/action/: Find.action  FindSphere.action
object_finder/include/: fft.h  image.h  obj_finding.h  renderbuffer.h  sphere_finding.h
object_finder/msg/: Component.msg  Mesh.msg  TargetDesc.msg  TargetRes.msg  Triangle.msg
object_finder/src/: fft.cpp  node.cpp  obj_finding.cpp  sphere_finding.cpp  test_fft.cpp  test_obj_finding.cpp
object_finder/srv/: TestPose.srv
rdi_explorer_dvl/: CMakeLists.txt  mainpage.dox  manifest.xml  nodelet.xml  package.xml
rdi_explorer_dvl/include/rdi_explorer_dvl/: driver.h
rdi_explorer_dvl/scripts/: fake_dvl
rdi_explorer_dvl/src/: nodelet.cpp
rise_6dof/: CMakeLists.txt  manifest.xml
sim/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  setup.py
sim/src/sim/: threed.py  util.py  vector.py
stm32f3discovery_imu_driver/: CMakeLists.txt  README  mainpage.dox  manifest.xml
thruster_handling/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  setup.py
thruster_handling/include/thruster_handling/: broadcaster.h
thruster_handling/msg/: ThrusterInfo.msg
thruster_handling/src/thruster_handling/: broadcaster.py  listener.py
thruster_mapper/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
ueye/: CMakeLists.txt  LICENSE  mainpage.dox  manifest.xml  nodelets.xml
ueye/cfg/: mono.cfg  stereo.cfg
ueye/include/ueye/: Camera.h  CameraNode.h  FramerateNode.h  StereoNode.h
ueye/launch/: nodelets.launch
ueye/src/: Camera.cpp  CameraNode.cpp  FramerateNode.cpp  StereoNode.cpp  camera_node.cpp  camera_nodelet.cpp  framerate_node.cpp  framerate_nodelet.cpp  stereo_node.cpp  stereo_nodelet.cpp
ueye2/: CMakeLists.txt  README.md  mainpage.dox  manifest.xml  nodelet_plugin.xml  package.xml
ueye2/cfg/: UEye.cfg  ueye2.cfg
ueye2/include/ueye2/: UEyeCamera.h  UEyeNode.h
ueye2/launch/: test.launch
ueye2/src/: UEyeCamera.cpp  UEyeNode.cpp  main.cpp  node.cpp  nodelet.cpp
uf_common/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  setup.py
uf_common/action/: MoveTo.action
uf_common/include/uf_common/: msg_helpers.h  param_helpers.h
uf_common/msg/: VelocityMeasurement.msg  x.msg
uf_common/scripts/: interactive_marker_moveto  param_saver  velocitymeasurements_to_vector3
uf_common/src/uf_common/: orientation_helpers.py
uf_rqt_plugins/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  plugin.xml  setup.py
uf_rqt_plugins/src/uf_rqt_plugins/: actuatorplugin.py  actuatorplugin.ui  engineering_plant.py  engineering_plant.ui  gps.py  gps.ui  killplugin.py  killplugin.ui  missionplugin.py  missionplugin.ui  propagatorgui.py  propagatorgui.ui  propagatorstatus.py  propagatorstatus.ui  thruster.ui  thrusterplugin.py  thrusterplugin.ui
uf_rviz_plugins/: CMakeLists.txt  manifest.xml  plugin_description.xml
uf_smach/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  setup.py
uf_smach/action/: RunMissions.action
uf_smach/msg/: Plan.msg  PlanEntry.msg  PlansStamped.msg
uf_smach/scripts/: barrel_roll  bins  buoy  hydrophones  manipulation  path  pizza  shooter  test
uf_smach/src/uf_smach/: common_states.py  hydrophone_states.py  legacy_vision_states.py  missions.py  object_finder_states.py  states.py  util.py
uf_smach/srv/: ModifyPlan.srv
uf_subbus_protocol/: manifest.xml
videoray_m5_thruster_driver/: CMakeLists.txt  package.xml
(+103 files in other folders)
