<package>
  <name>legacy_vision</name>
  <version>1.0.0</version>
  <description>legacy_vision</description>
  <maintainer email="forrest@forre.st">Forrest Voight</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/legacy_vision</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Forrest Voight</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>image_geometry</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>image_geometry</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>actionlib_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>image_geometry</test_depend> -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>message_filters</test_depend> -->
  <!-- <test_depend>nodelet</test_depend> -->
  <!-- <test_depend>actionlib</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>cv_bridge</test_depend> -->

<export>
    <nodelet plugin="${prefix}/nodelet.xml"/>
</export>

</package>