<package>
  <name>magnetic_dynamic_compensation</name>
  <version>1.0.0</version>
  <description>magnetic_dynamic_compensation</description>
  <maintainer email="forrest@forre.st">Forrest Voight</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/magnetic_dynamic_compensation</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Forrest Voight</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nodelet</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>nodelet</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>nodelet</test_depend> -->

<export>
    <nodelet plugin="${prefix}/nodelet.xml"/>
</export>

</package>