<package>
  <name>ueye2</name>
  <version>1.0.0</version>
  <description>ueye2</description>
  <maintainer email="matthewbot@gmail.com">Matthew Thompson</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/ueye2</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Matthew Thompson</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>camera_calibration_parsers</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>camera_calibration_parsers</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>dynamic_reconfigure</test_depend> -->
  <!-- <test_depend>nodelet</test_depend> -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>image_transport</test_depend> -->
  <!-- <test_depend>camera_calibration_parsers</test_depend> -->

<export>
    <nodelet plugin="${prefix}/nodelet_plugin.xml"/>
</export>

</package>