<package>
  <name>uf_common</name>
  <version>1.0.0</version>
  <description>uf_common</description>
  <maintainer email="forrest@forre.st">Forrest Voight</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/uf_common</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Forrest Voight</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>message_runtime</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>actionlib_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->
  <!-- <test_depend>actionlib</test_depend> -->
  <!-- <test_depend>interactive_markers</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->

<export>
    <cpp cflags="-I${prefix}/include `pkg-config --cflags eigen3`"/>
</export>

</package>