<package>
  <name>uf_smach</name>
  <version>1.0.0</version>
  <description>uf_smach</description>
  <maintainer email="matthewbot@gmail.com">Matt</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/uf_smach</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Matt</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>smach_ros</build_depend>
  <build_depend>rise_6dof</build_depend>
  <build_depend>hydrophones</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>object_finder</build_depend>
  <build_depend>smach</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>legacy_vision</build_depend>
  <build_depend>uf_common</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>indirect_kalman_6dof</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>smach_ros</run_depend>
  <run_depend>rise_6dof</run_depend>
  <run_depend>hydrophones</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>object_finder</run_depend>
  <run_depend>smach</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>legacy_vision</run_depend>
  <run_depend>uf_common</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>indirect_kalman_6dof</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>smach_ros</test_depend> -->
  <!-- <test_depend>hydrophones</test_depend> -->
  <!-- <test_depend>rise_6dof</test_depend> -->
  <!-- <test_depend>actionlib</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>indirect_kalman_6dof</test_depend> -->
  <!-- <test_depend>smach</test_depend> -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>legacy_vision</test_depend> -->
  <!-- <test_depend>uf_common</test_depend> -->
  <!-- <test_depend>actionlib_msgs</test_depend> -->
  <!-- <test_depend>object_finder</test_depend> -->

</package>